--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,6 @@
         <version>1.99</version>
       </dependency>
       <dependency>
-        <groupId>org.gitlab4j</groupId>
-        <artifactId>gitlab4j-api</artifactId>
-        <version>4.12.17</version>
-      </dependency>
-      <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.2.3</version>
@@ -76,11 +71,23 @@
         <artifactId>bc-git-integration-common</artifactId>
         <version>2.2.0-SNAPSHOT</version>
       </dependency>
-          <!-- https://mvnrepository.com/artifact/org.gitlab4j/gitlab4j-api -->
       <dependency>
         <groupId>org.gitlab4j</groupId>
         <artifactId>gitlab4j-api</artifactId>
         <version>5.0.1</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.9.0</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.json/json -->
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20220320</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
