--- a/bc-git-integration-webhook/pom.xml
+++ b/bc-git-integration-webhook/pom.xml
@@ -17,10 +17,13 @@
   <name>GitHub WebHook Integration</name>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
+      <version>6.2.0.202206071550-r</version>
     </dependency>
+
     <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>github-api</artifactId>
@@ -62,6 +65,17 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20220320</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jsch</artifactId>
+      <version>0.1.55</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>me.porcelli.bc-git-integration</groupId>
+      <artifactId>bc-git-integration-webhook</artifactId>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
