introduced entrypoint.sh

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,6 +1,10 @@
 [supervisord]
 nodaemon=true
 
+[program:bash]
+command= /usr/bin/envsubst </opt/jboss/gitremote >/opt/jboss/.gitremote
+command= /usr/bin/envsubst </opt/jboss/gitremote >/root/.gitremote
+
 [program:bc_workbench]
 directory=/opt/jboss/wildfly/bin
 stdout_logfile=/opt/jboss/wildfly/bin/bc_workbench.log
